--- a/main.html
+++ b/main.html
@@ -10,6 +10,12 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<div class="h1"><h1>Heading 1</h1></div>
+	<div class="h2"><h2>Heading 2</h2></div>
+	<div class="h3"><h3>Heading 3</h3></div>
+	<div class="h4"><h4>Heading 4</h4></div>
+	<div class="h5"><h5>Heading 5</h5></div>
+	<div class="h6"><h6>Heading 6</h6></div>
 
 </body>
 
